k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
      - name: code-server
        image: linuxserver/code-server
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: code-server-config
          mountPath: /config/workspace
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
      volumes:
      - name: code-server-config
        persistentVolumeClaim:
          claimName: code-server-pvc
